--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html>
   <head>
@@ -10,11 +11,7 @@
   </head>
   <body onload="fetchIssues()">
     <div class="container">
-
-      <h1>Issue Tracker: <span >0</span> 
-        (<span id="totalIssue">0</span>)
-      </h1>
-
+      <h1>Issue Tracker: <span id="closeIssue">0</span> (<span id="totalIssue">0</span>) </h1>
       <div class="jumbotron">
         <h3>Add New Issue:</h3>
         <form id="issueInputForm">
@@ -34,7 +31,7 @@
             <label for="issueAssignedTo">Assigned To</label>
             <input type="text" class="form-control" id="issueAssignedTo" placeholder="Enter responsible ...">
           </div>
-          <button type="submit" id="submit" class="btn btn-primary">Add</button>
+          <button type="submit" class="btn btn-primary">Add</button>
         </form>
       </div>
       <div class="col-lg-12">
